--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   sdk: '>=2.19.6 <3.0.0'
 
 dependencies:
+  auto_route: ^7.1.0
   cupertino_icons: ^1.0.2
   equatable: ^2.0.5
   flutter:
