--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.2
+  flutter_screenutil: ^5.8.4
   flutter_svg: ^2.0.5
   syncfusion_flutter_charts: ^22.1.36
 
