Initialize Firebase and add plugins

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   circular_countdown_timer: ^0.2.3
   cupertino_icons: ^1.0.2
   equatable: ^2.0.5
+  firebase_core: ^2.15.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.2
