new update Login with Gmail and Facebook

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,13 +12,17 @@ dependencies:
   circular_countdown_timer: ^0.2.3
   cupertino_icons: ^1.0.2
   equatable: ^2.0.5
+  firebase_auth: ^4.7.2
   firebase_core: ^2.15.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.2
   flutter_dotenv: ^5.1.0
+  flutter_facebook_auth: ^6.0.1
   flutter_screenutil: ^5.8.4
   flutter_svg: ^2.0.5
+  get_it: ^7.6.0
+  google_sign_in: ^6.1.4
   syncfusion_flutter_charts: ^22.1.36
 
 dev_dependencies:
