--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -50,10 +50,11 @@ android {
         applicationId "com.example.fitbit"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -71,4 +72,12 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    implementation (platform("com.google.firebase:firebase-bom:32.2.2"))
+
+    implementation ("com.google.firebase:firebase-auth-ktx")
+
+    implementation 'com.facebook.android:facebook-android-sdk:latest.release'
+
+    implementation 'com.facebook.android:facebook-android-sdk:[8,9)'
 }
