--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   auto_route: ^7.1.0
   circular_countdown_timer: ^0.2.3
+  cloud_firestore: ^4.9.3
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
   equatable: ^2.0.5
