--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 
 dependencies:
   auto_route: ^7.1.0
+  bloc: ^8.1.2
   circular_countdown_timer: ^0.2.3
   cloud_firestore: ^4.9.3
   cupertino_icons: ^1.0.2
