--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   flutter_svg: ^2.0.5
   get_it: ^7.6.0
   google_sign_in: ^6.1.4
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   internet_connection_checker: ^1.0.0+1
   syncfusion_flutter_charts: ^22.1.36
 
