--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   auto_route: ^7.1.0
   bloc: ^8.1.2
+
   circular_countdown_timer: ^0.2.3
   cloud_firestore: ^4.9.3
   cupertino_icons: ^1.0.2
@@ -28,11 +29,14 @@ dependencies:
   google_sign_in: ^6.1.4
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+
   internet_connection_checker: ^1.0.0+1
   syncfusion_flutter_charts: ^22.1.36
 
 dev_dependencies:
   flutter_lints: ^2.0.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.7
   flutter_test:
     sdk: flutter
 
